--- a/index.html
+++ b/index.html
@@ -581,6 +581,11 @@
         <p class="muted" id="owner-hint" style="display:none;">Owner mode is ON. Add <code>?owner=1</code> once to this URL to enable it on your device.</p>
       </div>
     </div>
+    <div class="coming-soon">
+      <div class="box">
+        Repository (coming soon, stay tuned)
+      </div>
+    </div>
   </section>
 
   <script>
