--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
   <section id="course">
     <div class="inner">
       <h2>Course Content</h2>
-      <p class="lead">Start with Listening, then move to Reading, Writing, and Speaking. Each block includes videos and notes.</p>
+      <p class="lead">So I dont know what to do with this page, I would need the wireframe honestly. Till then let me add a placeholder here. Start with Listening, then move to Reading, Writing, and Speaking. Each block includes videos and notes.</p>
 
       <!-- LISTENING -->
       <div style="margin-top:34px;">
