--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     
     /* Put the background on ::before so we can stack gradients + photo cleanly */
     header#home::before{
+      filter: brightness(0.78) contrast(1.06);
       content:"";
       position:absolute; inset:0; z-index:0;
     
