--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
       position:absolute; inset:0; z-index:0;
       background-image:
         /* dark overlay first for legibility */
-        linear-gradient(to right, rgba(0,0,0,.58), rgba(0,0,0,.58)),
+        linear-gradient(to right, rgba(0,0,0,.28), rgba(0,0,0,.38)),
         /* Unsplash photo (1x/2x) */
         image-set(
           url('https://unsplash.com/photos/HH4WBGNyltc/download?force=true&w=1600') 1x,
           url('https://unsplash.com/photos/HH4WBGNyltc/download?force=true&w=2400') 2x
         );
       background-size: cover, cover;
-      background-position: center center, center center;
+      background-positiong: center center, center center;
       background-repeat: no-repeat, no-repeat;
     
       /* gentle depth; tweak if needed */
