--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
 
     <div class="inner">
       <h2>Repository</h2>
-      <p class="lead">Enter the access code to unlock downloads.</p>
+      <p class="lead">Enter the access code to unlock downloads. Visit the 'Connect with me' section, to get your access code.</p>
 
       <!-- Gate -->
       <div id="repo-gate">
