--- a/index2.html
+++ b/index2.html
@@ -608,7 +608,7 @@
   <section id="repo">
     <div class="inner">
       <h2>Repository</h2>
-      <p class="lead">Enter the access code to unlock downloads.</p>
+      <p class="lead">Enter the access code to unlock downloads. Visit the 'Connect with me' section to get your access code.</p>
 
       <!-- Gate -->
       <div id="repo-gate">
