--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           url('https://unsplash.com/photos/HH4WBGNyltc/download?force=true&w=2400') 2x
         );
       background-size: cover, cover;
-      background-position: center center, center center;
+      background-position: center top, center top; /* anchor to top for both layers */
       background-repeat: no-repeat, no-repeat;
       filter: brightness(0.88) contrast(1.06) saturate(1.05);
       background-attachment: fixed;
