--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>BandForge IELTS — Free IELTS Preparation Hub</title>
+  <title>Ivy Academy — English & IELTS Preparation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root { color-scheme: light; }
