--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Ivy Academy — English & IELTS Preparation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Ivy Academy: Premier English (ELT) and IELTS training. Speak with confidence, write with clarity, and achieve band scores that open global opportunities." />
   <style>
     :root { color-scheme: light; }
     * { box-sizing: border-box; }
