--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     <div class="home-hero">
       <div class="home-wrap">
         <div class="brandbar" aria-label="Brand">
-          <div class="brand">BandForge IELTS <small>Free learning hub for IELTS aspirants</small></div>
+          <div class="brand">Ivy Academy <small>Premier English &amp; IELTS Training</small></div>
           <div class="cta-row" role="group" aria-label="Quick actions">
             <a class="btn ghost" href="#course">Browse Lessons</a>
             <a class="btn ghost" href="#connect">Get Access Code</a>
