--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 
         <div class="hero-grid">
           <div class="hero-copy">
-            <h1>Ace your IELTS with structured lessons, mock tests, and expert tips.</h1>
+            <h1>Ivy Academy <small>Premier English &amp; IELTS Training</small></h1>
             <p class="lead">Your all-in-one prep: Listening, Reading, Writing, and Speaking — organised like the big providers, but free.</p>
             <div class="cta-row">
               <a class="btn primary" href="#course">Start learning</a>
