--- a/index.html
+++ b/index.html
@@ -958,8 +958,8 @@
             <p class="lead">With an expert trainer, proven strategies, and a results-driven approach, we’re the trusted choice for ambitious learners.</p>
             <p class="lead"><strong>Fluency. Confidence. Success. That’s the Ivy promise.</strong></p>
             <div class="cta-row">
-              <a class="btn primary" href="#blog">Start IELTS Prep</a>
-              <a class="btn ghost" href="#blog">Improve My English</a>
+              <a class="btn primary" href="#blog" data-panel-nav>Read Blogs</a>
+              <a class="btn ghost" href="#connect" data-panel-nav>Connect with us</a>
             </div>
 
             <div class="benefits" aria-label="Key benefits">
